# textrescue-api

./: .gitignore  Cargo.toml
src/: main.rs
src/api/: mod.rs  paste_api.rs  user_api.rs
src/auth/: jwt_auth.rs
src/dtos/: mod.rs  password_dto.rs  paste_update_dto.rs
src/models/: auth_dto.rs  mod.rs  paste_dto.rs  paste_model.rs  user_model.rs  user_signin_model.rs
src/repository/: mongodb_repo.rs
